🚐🏚 Checkpoint ./.glitch-assets:7911531/828 ./index.html:7911531/101

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">Hello World!</h1>
+    
+    <img src="images/9f3d76fd-c464-4c21-94d8-db7eaaa48246%2F%23303(low).jpg" alt="" />a
   </div>
   <script src="js/main.js"></script>
 </body>
