--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
   <div class="container">
     <h1 class="title">Hello World!</h1>
     
-    <img src="images/9f3d76fd-c464-4c21-94d8-db7eaaa48246%2F%23303(low).jpg" alt="" />a
+  bbc
   </div>
   <script src="js/main.js"></script>
+  <script src="js/largefile.js"></script>
 </body>
 </html>
