🚪❤️ Checkpoint ./index.html:7911531/193 ./sw.js:7911531/110 ./page2.html:7911531/1289 ./js/largefile-larger.js copy:7911531/22806552

--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 <body class="fullscreen">
+  
+  
   <div class="container">
     <h1 class="title">Hello World!</h1>
-    
-  bbc
+    hello tommy<br />
+  testing service work caching
   </div>
+  
+  
+  
+  <div>
+    <a href="page2.html">page2 larger js files</a>
+  </div>
+  
+  
   <script src="js/main.js"></script>
   <script src="js/largefile.js"></script>
 </body>
