🐁🍓 Checkpoint ./js/largefile-huge.js:7911531/45613104 ./page2.html:7911531/368 ./page3.html:7911531/1629 ./sw.js:7911531/104 ./index.html:7911531/246 ./css/style.css:7911531/14

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <a href="page2.html">page2 larger js files</a>
   </div>
   
+   <div>
+    <a href="page3.html">page3 huge js files</a>
+  </div>
+  
   
   <script src="js/main.js"></script>
   <script src="js/largefile.js"></script>
