--- a/page2.html
+++ b/page2.html
@@ -16,10 +16,24 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 <body class="fullscreen">
-  <div class="container">
-    <h1 class="title">Pages 2 larger larger js files</h1>
+
+<div class="container">
+<h1 class="title">Pages 2 larger larger js files</h1>
+
+<div>
+<a href="page3.html">page3 huge js files</a>
+</div>
   
+  <div>
+    <a href="index.html">go homepage</a>
   </div>
+
+
+</div>
+  
+  
+  
+  
   <script src="js/main.js"></script>
   <script src="js/largefile.js"></script>
   <script src="js/largefile-larger.js"></script>
