📠🏪 Checkpoint ./index.html:7911531/184 ./page2.html:7911531/516 ./page3.html:7911531/185

--- a/page3.html
+++ b/page3.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
   <title>Hello World</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="css/style.css">
@@ -18,7 +21,7 @@
 <body class="fullscreen">
 
 <div class="container">
-<h1 class="title">Pages 2 larger larger js files</h1>
+<h1 class="title">Pages 3 larger larger js filessssssssss</h1>
 
 <div>
 <a href="page2.html">page2 larger js files</a>
