--- a/page4-images.html
+++ b/page4-images.html
@@ -2,19 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
-
   <title>Hello World</title>
-
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="css/style.css">
-
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="css/style.css">
-
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/hello-icon-152.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,30 +19,28 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 <body class="fullscreen">
-  
-  
-  <div class="container">
-    <h1 class="title">Hello World!</h1>
-    hello tommy<br />
-  testing service work caching
-  </div>
-  
-  
+
+<div class="container">
+<h1 class="title">Pages 4 larger larger image</h1>
+
+
+
+<img src="images/97221-unsplash.jpg">
+<img src="images/IMG_8093.jpeg">
+
+
   
   <div>
-    <a href="page2.html">page2 larger js files</a>
-  </div>
-  
-   <div>
-    <a href="page3.html">page3 huge js files</a>
+    <a href="index.html">go homepage</a>
   </div>
 
-     <div>
-    <a href="page3.html">page4 images</a>
-  </div>
+
+</div>
+  
+  
   
   
   <script src="js/main.js"></script>
-  <script src="js/largefile.js"></script>
+  <script src="js/largefile-huge.js"></script>
 </body>
 </html>
