--- a/page3.html
+++ b/page3.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
   <title>Hello World</title>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/hello-icon-152.png">
@@ -39,5 +39,11 @@
   
   <script src="js/main.js"></script>
   <script src="js/largefile-huge.js"></script>
+
+ <script src="js/superlargefile.js"></script>
+
+
+
+  
 </body>
 </html>
