--- a/index.html
+++ b/index.html
@@ -1,53 +1,41 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
-
-  <title>Hello World</title>
-
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="css/style.css">
-
-
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="images/hello-icon-152.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="white"/>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Hello World">
-  <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta charset="utf-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <title>Hello World</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/hello-icon-152.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="white" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Hello World">
+    <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
-<body class="fullscreen">
-  
-  
-  <div class="container">
-    <h1 class="title">Hello World!</h1>
-    hello tommy<br />
-  testing service work caching
-  </div>
-  
-  
-  
-  <div>
-    <a href="page2.html">page2 larger js files</a>
-  </div>
-  
-   <div>
-    <a href="page3.html">page3 huge js files</a>
-  </div>
 
-     <div>
-    <a href="page4.html">page4 images</a>
-  </div>
-  
-  
-  <script src="js/main.js"></script>
-  <script src="js/largefile.js"></script>
+<body class="fullscreen">
+    <div class="container">
+        <h1 class="title">Hello World!</h1>
+        hello tommy<br />
+        testing service worker caching
+    </div>
+    <div>
+        <a href="page2.html">page2 larger js files</a>
+    </div>
+    <div>
+        <a href="page3.html">page3 huge js files</a>
+    </div>
+    <div>
+        <a href="page4.html">page4 images</a>
+    </div>
+    <script src="js/main.js"></script>
+    <script src="js/largefile.js"></script>
 </body>
+
 </html>
