--- a/page4.html
+++ b/page4.html
@@ -22,8 +22,8 @@
 <body class="fullscreen">
     <div class="container">
         <h1 class="title">Pages 4 larger larger image</h1>
-        <img src="images/97221-unsplash.jpg">
-        <img src="images/IMG_8093.jpeg">
+        <img src="images/97221-unsplash.jpg" width="70%">
+        <img src="images/IMG_8093.jpeg" width="70%">
         <div>
             <a href="index.html">go homepage</a>
         </div>
