--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <div>
         <a href="page4.html">page4 images</a>
     </div>
+        <div>
+        <a href="page4.html">page5 images</a>
+    </div>
     <script src="js/main.js"></script>
     <script src="js/largefile.js"></script>
 </body>
