--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     </div>
         <div>
         <a href="page5.html">page5 images</a>
+    </div>        <div>
+        <a href="page6.html">page6 no sw js file 7mb</a>
     </div>
     <script src="js/main.js"></script>
     <script src="js/largefile.js"></script>
